--- a/my-react-app/src/static/css/Home.css
+++ b/my-react-app/src/static/css/Home.css
@@ -1,8 +1,26 @@
+.home_header{
+  width:100%;
+  height:7vh;
+  background-color: white;
+  position:relative;
+  box-shadow: 0px 2px 3px 0px rgb(0, 0, 0,0.1);
+  z-index: 1;
+}
+.home_header > img{
+  width:13%;
+  position:absolute;
+  left:1%;
+  top:50%;
+  transform:translate(-1%,-50%);
+}
 .a_box{
     width:100%;
-    height:90vh;
-    background-color:bisque;
-  
+    height:80vh;
+    background-image: 
+      linear-gradient(rgba(0, 0, 0, 0.36), rgba(0, 0, 0, 0.36)),
+      url("./classPic.png");
+    background-size: 110%;
+    background-position: 90% 50%; 
     position:relative;
   }
   .home_center{
