--- a/my-react-app/src/static/css/Home.css
+++ b/my-react-app/src/static/css/Home.css
@@ -17,30 +17,61 @@
     width:100%;
     height:80vh;
     background-image: 
-      linear-gradient(rgba(0, 0, 0, 0.36), rgba(0, 0, 0, 0.36)),
+      linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
       url("./classPic.png");
     background-size: 110%;
-    background-position: 90% 50%; 
+    background-position: 100% 25%; 
     position:relative;
   }
   .home_center{
-    width:50%;
-  
+    width:60%;
+    height:100%;
     position:absolute;
     left:50%;
-    top:30%;
-    transform: translate(-50%,-30%);
+    transform: translateX(-50%);
   
     text-align: center;
   }
+  .home_center > p{
+    font-family: "toppan-bunkyu-midashi-go-std", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    color: white;
+    font-size: 3.3vw;
+    margin-top: 12%;
+    margin-bottom: 0;
+    text-align: left;
+  }
   .home_center > img{
-    width:50%;
+    width:100%;
   }
   .click_box{
-    width:50%;
+    width:60%;
+    height:18%;
     margin:auto;
-    background-color: #6dc100;
+    background-color: white;
+    border: 3px #389500 solid;
+    margin-top: 4.5%;
+    position:relative;
+    display: flex;
   }
   .click_box > p{
-    color:white;
+    width:97%;
+    font-family: "kozuka-gothic-pr6n", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color:#389500;
+    font-size: 2.2vw;
+    margin:0;
+    position:absolute;
+    top:50%;
+    transform:translateY(-50%);
+  }
+  .click_box > img{
+    width:3%;
+    height:auto;
+    position:absolute;
+    right:4%;
+    top:50%;
+    transform:translate(-2%,-50%);
   }
