--- a/my-react-app/src/static/css/Edit.css
+++ b/my-react-app/src/static/css/Edit.css
@@ -13,28 +13,59 @@
   top:50%;
   transform:translate(-1%,-50%);
 }
+
 .editWrapper{
   width:100%;
   height:93vh;
   display:flex;
 }
 .leftContainer{
-  width:50%;
+  width:80%;
   height:100%;
-  position:relative;
+  display:flex;
+}
+.dispayControlButton{
+  width:20%;
+  height:100%;
+  position: relative;
+}
+.buttonContainer{
+  width:30%;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top:50%;
+  right:15%;
+  transform: translateY(-50%);
+}
+.switchButton{
+  width:100%;
+  aspect-ratio: 1/1;
+  margin:5%;
+  background-color: white;
+  border: 0px;
+  border-radius: 100%;
+  box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.4);
+}
+.mainContainer{
+  width:80%;
+  height:100%;
+}
+.displayHeader{
+  width:100%;
+  height:10%;
+  color:white;
+  background-color: #48bc00;
 }
 .mainDisplay{
-  width:90%;
-  height:95%;
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
+  width:100%;
+  height:90%;
   overflow-x: scroll;
   overflow-y: scroll;
+  white-space: nowrap;
 }
 
 .rightContainer{
-  width:50%;
+  width:20%;
   height:100%;
 }
