--- a/my-react-app/src/static/css/Home.css
+++ b/my-react-app/src/static/css/Home.css
@@ -23,6 +23,23 @@
     background-position: 100% 25%; 
     position:relative;
   }
+  .csvGenerateButton{
+    color:white;
+    background-color: #389500;
+    width:6%;
+    aspect-ratio: 1/1;
+    border:3px white solid;
+    border-radius: 100%;
+    font-weight: 600;
+    font-size: 1%;;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+    right:2%;
+    bottom:3%;
+  }
   .home_center{
     width:60%;
     height:100%;
