--- a/my-react-app/src/static/css/Home.css
+++ b/my-react-app/src/static/css/Home.css
@@ -12,6 +12,7 @@
   left:1%;
   top:50%;
   transform:translate(-1%,-50%);
+  cursor:pointer;
 }
 .a_box{
     width:100%;
@@ -39,6 +40,7 @@
     position: absolute;
     right:2%;
     bottom:3%;
+    cursor: pointer;
   }
   .home_center{
     width:60%;
@@ -58,6 +60,7 @@
     margin-top: 12%;
     margin-bottom: 0;
     text-align: left;
+    cursor:default;
   }
   .home_center > img{
     width:100%;
@@ -71,6 +74,7 @@
     margin-top: 4.5%;
     position:relative;
     display: flex;
+    cursor:pointer;
   }
   .click_box > p{
     width:97%;
