--- a/my-react-app/src/static/css/Home.css
+++ b/my-react-app/src/static/css/Home.css
@@ -6,7 +6,7 @@
   box-shadow: 0px 2px 3px 0px rgb(0, 0, 0,0.1);
   z-index: 1;
 }
-.home_header > img{
+.aHeaderLogoimg{
   width:13%;
   position:absolute;
   left:1%;
@@ -14,6 +14,40 @@
   transform:translate(-1%,-50%);
   cursor:pointer;
 }
+.aHeaderLinks{
+  width:20%;
+  height:100%;
+  position:absolute;
+  right:0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.aHeaderLink{
+  height:50%;
+  margin: 0;
+  cursor:pointer;
+  
+  position:relative; /*アンダーラインの起点.*/
+}
+.aHeaderLink::after{
+  content:"";
+  background-color: #389500;
+  width:0%;
+  height:2%;
+  position:absolute;
+  bottom: 0;
+  left:0;
+  opacity:0;
+  transition: all 0.3s ease;
+}
+.aHeaderLink:hover::after {
+  opacity:1;
+  width:100%;
+}
+
+
+
 .a_box{
     width:100%;
     height:80vh;
@@ -109,5 +143,5 @@
     content:url("/KIDsClass/white-arrow.png");
   }
   .click_box, .click_box > p, .click_box > img{
-    transition:all 1.3s ease;
+    transition:all 0.5s ease;
   }
