--- a/my-react-app/src/static/css/FileDropOverlay.css
+++ b/my-react-app/src/static/css/FileDropOverlay.css
@@ -15,7 +15,7 @@
   color:white;
   margin:auto;
   text-wrap:nowrap;
-  transition: all 0.1s ease;
+  transition: width 0.1s ease, border 0.2s ease;
 }
 .fileSelectP:hover{
   border: 1px #389500 solid;
@@ -23,4 +23,14 @@
   color:#389500;
   width:20.5%;
   font-weight: 700;
+}
+
+.roadingSpinerContainer{
+  opacity:0;
+  transition: all 0.2s ease;
+  pointer-events: none; /* 非表示中は操作不可に */
+}
+.roadingSpinerContainer.roadingShowing{
+  opacity:1;
+  pointer-events: auto;
 }
