--- a/my-react-app/src/static/css/FileDetailOverlay.css
+++ b/my-react-app/src/static/css/FileDetailOverlay.css
@@ -15,6 +15,12 @@
   height:80vh;
 }
 
+.detailDisp{
+  scrollbar-color: #245d00 white;
+  scrollbar-width: thin;
+}
+
+
 table{
   border-collapse:collapse;
   width:120%;
