--- a/my-react-app/src/static/css/Edit.css
+++ b/my-react-app/src/static/css/Edit.css
@@ -22,10 +22,13 @@
 }
 .edit-content-container > :first-child{
   width:10vw;
+  height:100%;
 }
 .edit-content-container > :nth-child(2){
   width:75vw;
+  height:100%;
 }
 .edit-content-container > :nth-child(3){
   width:15vw;
+  height:100%;
 }
